# intentlayer-python-sdk

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTING.md  Makefile  README.md  REFACTORING.md  TECHNICAL_DOCUMENT_TS_SDK.md  __init__.py  client.py  codecov.yml  did_client.py  openapi-spec.yaml  plan.md  pyproject.toml  test_parametrization_summary.md
.github/workflows/: cross-platform-tests.yml  integration-tests.yml  linux-tests.yml  macos-tests.yml  proto-integrity.yml  proto-verification.yml  publish.yml  python-tests.yml  v1-code-check.yml  v1-protocol-check.yml  windows-tests.yml
docs/: SECURITY.md  auto_did_gateway.md  test_parametrization_summary.md
docs/cli/: verify.md
examples/: .env.example  README.md  auto_did_example.py  auto_did_gateway_example.py  auto_did_v2_example.py  gateway_example.py  network_example.py  simple_usage.py  smoke_test.py  verify_example.py
intent_cli/: verify.py
intentlayer_sdk/: client.py  models.py  utils.py  version.py
intentlayer_sdk/gateway/: __init__.py  _deps.py  _rate_limited_log.py  client.py  exceptions.py  proto_transport.py  transport.py  (+1 more)
tests/: conftest.py  test_additional_coverage.py  test_advanced_coverage.py  test_auto_did.py  test_auto_did_gateway.py  test_backwards_compat.py  test_chain_id_coverage.py  test_client.py  test_client_coverage.py  test_client_errors.py  test_cross_platform_compatibility.py  test_custom_signer.py  test_did_registry.py  test_envelope.py  test_extra_coverage.py  test_gateway_client.py  test_gateway_proto_roundtrip.py  test_identity.py  test_integration.py  test_ipfs_pin_coverage.py  test_ipfs_utils.py  test_jwt_verification.py  test_makefile_cross_platform.py  test_min_stake_coverage.py  test_network_config.py  test_perf_auto_did.py  test_property_based.py  test_rate_limit_cache.py  test_tx_url_coverage.py  test_utils.py  test_utils_errors.py  test_validation.py  test_version.py  test_version_errors.py
(+32 files in other folders)
